# 30122-project-chiffordable

./: .gitignore  README.md  main.py  pyproject.toml
app/: Utils_app.py  dash_app.py  visualizations.py
app/archive/: communities_map.py  merged_visual_2.0.py
extracted_data/: Livability.csv  Zillow-complete.csv  Zillow-general.csv  Zillow.csv  cmap.csv  livability.csv  livability_incompleted.csv
extracting/: Livability.ipynb  Utils.py  Zillow.ipynb  Zillow.py  agustin_viz.ipynb  agustin_viz.py  cmap.py  listings.csv  liv_agustin.py  livability.py  merge.ipynb  merge_data.py  properties_scrapper.ipynb  property_trial.json  test.ipynb  zillow.py  zillow_details.py  zillow_listing_scraper.py  zillow_utils.py
extracting/archive/: merge_data.py  properties_scrapper.ipynb  test.ipynb
milestones/: milestone1.md  milestone2.md
tests/: test_cmap.py  test_livability.py  test_utils.py  test_utilsapp.py  test_zillow.py  test_zillow_details.py
visualizations/: Utils_app.py  communities_map.py  dash_app.py  dash_layout.py  listings_map.py  merged_visual.py  merged_visual_2.0.py  visualizations.py
visualizations/archive/: listings_map.py
