[project]
name = "30122-project-chiffordable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "path>=17.1.0",
    "shapely>=2.0.7",
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "folium>=0.19.4"
]
